--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 #By default, ConTeXt searches an image in the current directory, the parent directory, and the grand-parent directory.
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/Alvaro-photo-chiquita.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(context
-    COMMAND ${PANDOC_EXE} --standalone --resource-path=${CMAKE_CURRENT_SOURCE_DIR}/src --template ${CMAKE_CURRENT_SOURCE_DIR}/src/chmduquesne.tex --from markdown --to context --variable papersize=A4 --output ${CMAKE_CURRENT_BINARY_DIR}/resume.tex ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md
+    COMMAND ${PANDOC_EXE} --metadata title-prefix="CV" --metadata title='Alvaro Denis Acosta' --standalone --resource-path=${CMAKE_CURRENT_SOURCE_DIR}/src --template ${CMAKE_CURRENT_SOURCE_DIR}/src/chmduquesne.tex --from markdown --to context --variable papersize=A4 --output ${CMAKE_CURRENT_BINARY_DIR}/resume.tex ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md
     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md
     BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/resume.tex
     COMMENT "Generating ConTeXt file"
@@ -29,19 +29,19 @@ add_custom_target(pdf ALL
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/www)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/Alvaro-photo-chiquita.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/www)
 add_custom_target(html
-    COMMAND ${PANDOC_EXE} --metadata title-prefix="CV" --standalone --resource-path=${CMAKE_CURRENT_SOURCE_DIR}/src --include-in-header ${CMAKE_CURRENT_SOURCE_DIR}/src/style.css --from markdown --to html --output ${CMAKE_CURRENT_BINARY_DIR}/www/index.html ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md
+    COMMAND ${PANDOC_EXE} --metadata title-prefix="CV" --metadata title='Alvaro Denis Acosta' --standalone --resource-path=${CMAKE_CURRENT_SOURCE_DIR}/src --include-in-header ${CMAKE_CURRENT_SOURCE_DIR}/src/style.css --from markdown --to html --output ${CMAKE_CURRENT_BINARY_DIR}/www/index.html ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md
     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md ${CMAKE_CURRENT_SOURCE_DIR}/src/style.css
     BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/www/index.html
     COMMENT "Generating html file"
     SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md)
 add_custom_target(doc
-    COMMAND ${PANDOC_EXE} --standalone --resource-path=${CMAKE_CURRENT_SOURCE_DIR}/src --from markdown --to docx --output ${CMAKE_CURRENT_BINARY_DIR}/resume.docx ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md
+    COMMAND ${PANDOC_EXE} --metadata title-prefix="CV" --metadata title='Alvaro Denis Acosta' --standalone --resource-path=${CMAKE_CURRENT_SOURCE_DIR}/src --from markdown --to docx --output ${CMAKE_CURRENT_BINARY_DIR}/resume.docx ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md
     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md ${CMAKE_CURRENT_SOURCE_DIR}/src/style.css
     BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/resume.docx
     COMMENT "Generating docx file"
     SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md)
 add_custom_target(txt
-    COMMAND ${PANDOC_EXE} --standalone --resource-path=${CMAKE_CURRENT_SOURCE_DIR}/src --from markdown --to plain+smart --output ${CMAKE_CURRENT_BINARY_DIR}/resume.txt ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md
+    COMMAND ${PANDOC_EXE} --metadata title-prefix="CV" --metadata title='Alvaro Denis Acosta' --standalone --resource-path=${CMAKE_CURRENT_SOURCE_DIR}/src --from markdown --to plain+smart --output ${CMAKE_CURRENT_BINARY_DIR}/resume.txt ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md
     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/README.md ${CMAKE_CURRENT_SOURCE_DIR}/src/style.css
     BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/resume.txt
     COMMENT "Generating txt file"
